# MetExtract-II

./: .gitignore  Baseline.py  Chromatogram.py  FTICR.py  FTICRModule.py  FragExtract.py  FragExtract_processTarget.py  GradientPeaks.py  HCA.py  HCA_general.py  LICENSE.txt  LoggingSetup.py  MExtract.py  MSScan.py  MZHCA.py  MassSpecWavelet.py  MassSpecWaveletIdentification.r  MetExtractII_Main.py  PackagesLicenseInfo.txt  README.md  RPATH.conf  SGR.py  SqliteCache.py  TableUtils.py  TracerEdit.py  XICAlignment.py  XICAlignment.r  adductsEdit.py  annotateResultMatrix.py  bracketResults.py  calculateIsotopeEnrichment.R  check_enum_issues.py  exportAsFeatureML.py  exportToInclusionList.py  formulaTools.py  generateGUIS.bat  heteroAtomEdit.py  installBrewPython_Mac.txt  pyperclip.py  pyproject.toml  (+19 more)
DesignPatterns/: IDSingleton.py  SingletonDecorator.py  __init__.py
MSMS/: optimizeMSMSTargets.py
Settings/: LTQ-Orbitrap-XL__HPLC.ini  QExactive__HPLC.ini  QTof__HPLC.ini  defaultSettings.ini
chromPeakPicking/: ChromatographicPeakPicking.py  GradientPeaks.py  MassSpecWavelet.py  MassSpecWaveletIdentification.r  XCMSCentwave.py  XCMSCentwave.r
documentation/: captionjs.css  index.html  jquery.caption.js  main.css  results_explain.docx
help/: INSTALL.txt  MetExtract_Explain.pptx  MetExtract_UserGuide.docx
mePyGuis/: ColoredProgressBar.py  DependenciesDialog.py  FE_mainWindow.py  FTICRWindow.py  ModuleSelectionWindow.py  ProgressWrapper.py  QScrollableMessageBox.py  RegExTestDialog.py  RunningBarChart.py  TSVLoaderEdit.py  TSVLoaderEditor.py  TracerEdit.py  TracerEditor.py  __init__.py  adductsEdit.py  adductsEditor.py  calcIsoEnrichmentDialog.py  calcIsotopeEnrichmentDialog.py  combineResultsDialog.py  groupEdit.py  groupEditor.py  heteroAtomEdit.py  heteroAtomEditor.py  mainWindow.py
resources/: setupR_minimal.inf
ressources/: MEIcon.skc
resultsPostProcessing/: combineResults.py  findMSMSExclusionList.py  generateSumFormulas.py  optimizeTargetedMSMSList.py  (+1 more)
(+103 files in other folders)
