[project]
name = "pymetextract"
version = "3.5.1"
description = "MetExtract II"
authors = [
    { name = "MetExtract Team", email = "christoph.bueschl@boku.ac.at" }
]
readme = "README.md"
requires-python = "==3.13.3"
license = { text = "GPL-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "PySide6>=6.5.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "xlsxwriter>=3.0.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "lxml>=4.6.0",
    "termcolor>=1.1.0",
    "pyperclip>=1.8.0",
    "scikit-learn>=1.0.0",
    "pyinstaller>=4.0",
    "reportlab>=3.5.0",
    "rpy2>=3.6.3",
    "psutil>=7.1.0",
    "pymzml>=2.5.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
]

[tool.black]
line-length = 250
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 300
